Splitter should not trigger page scrollbars during resize. Fixes telerik/kendo-ui-core#585

--- a/styles/web/common/splitter.less
+++ b/styles/web/common/splitter.less
@@ -144,3 +144,7 @@
 .k-splitbar-vertical-hover > .k-collapse-next,
 .k-splitbar-vertical-hover > .k-expand-prev { background-position: -14px -165px; }
 
+.k-splitter-resizing
+{
+    overflow: hidden;
+}
